--- a/SportsSideKick/app/src/main/AndroidManifest.xml
+++ b/SportsSideKick/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- Accepts URIs that begin with "https://ssk-sharing-development.herokuapp.com” -->
-                <data android:scheme="https" android:host="ssk-sharing-development.herokuapp.com" />
+                <data android:scheme="https" android:host="ssk-sharing-testflight.herokuapp.com" />
             </intent-filter>
         </activity>
         <activity
