--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -201,5 +201,8 @@ dependencies {
     compile 'com.github.instacart.truetime-android:library-extension-rx:3.3'
 //  Image loader library - https://github.com/bumptech/glide/tree/3.0
     compile 'com.github.bumptech.glide:glide:3.8.0'
+
+//  Number picker used for translation popup to select language - https://github.com/ShawnLin013/NumberPicker
+    compile 'com.shawnlin:number-picker:2.4.4'
 }
 apply plugin: 'com.google.gms.google-services'
