--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -16,12 +16,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '26.0.2'
     defaultConfig {
 
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 27
 
         testInstrumentationRunner "android.support.left.runner.AndroidJUnitRunner"
         multiDexEnabled true
@@ -29,7 +29,7 @@ android {
         renderscriptTargetApi 17
         renderscriptSupportModeEnabled true
     }
-
+    flavorDimensions "main"
     productFlavors {
         sportsidekick {
             applicationId "tv.sportssidekick.sportssidekick"
@@ -93,21 +93,21 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
 // Annotation processors
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 // Google support libraries
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:26.0.1'
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.android.support:percent:26.0.1'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:percent:26.1.0'
+    compile 'com.android.support:multidex:1.0.2'
 //  Required by Glide - image library
-    compile 'com.android.support:support-v4:26.0.0-beta2'
+    compile 'com.android.support:support-v4:26.1.0'
 
 //  We only need Firebase for Push notifications!
-    compile 'com.google.firebase:firebase-core:10.2.4'
-    compile 'com.google.firebase:firebase-messaging:10.2.4'
+    compile 'com.google.firebase:firebase-core:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
 
 //  Other Google libraries for Youtube
     compile ('com.google.http-client:google-http-client-android:1.20.0')
@@ -128,7 +128,7 @@ dependencies {
                 exclude group: 'org.apache.httpcomponents'
             }
 
-//  Gamesparks SDK - whole backend is relying on it (it resides on maven)
+//  Gamesparks SDK - whole backend is relying on it (it resides on maven) - TODO Check for version that is table - 3.3 and 3.4 are not working!
     compile 'com.gamesparks.sdk:gamesparks-java-sdk:0.3.2-SNAPSHOT'
 
 //  General data-binding package for Jackson used for parsing of GS response in model - https://github.com/FasterXML/jackson-databind
@@ -138,8 +138,8 @@ dependencies {
 //  Video chat is implemented with Twillio (it  resides on jcenter) - https://www.twilio.com/docs/api/video/download-video-sdks
     compile 'com.twilio:video-android:1.3.0'
 //  Facebook SDK is used for Analytics, Share and to populate Sign up data - https://developers.facebook.com/docs/android/
-    compile 'com.facebook.android:facebook-android-sdk:4.23.0'
-    compile('com.facebook.android:audience-network-sdk:4.23.0') {
+    compile 'com.facebook.android:facebook-android-sdk:4.24.0'
+    compile('com.facebook.android:audience-network-sdk:4.24.0') {
         exclude group: 'com.google.android.gms'
     }
 //  Twitter KIT used for share functionality - https://github.com/twitter/twitter-kit-android
@@ -160,7 +160,7 @@ dependencies {
 //  Expandable layout used in Join Chat fragment - https://github.com/AAkira/ExpandableLayout
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
 //  Permission handling library used around the project for easier handling of permissions - https://github.com/hotchemi/PermissionsDispatcher
-    compile 'com.github.hotchemi:permissionsdispatcher:2.3.0'
+    compile 'com.github.hotchemi:permissionsdispatcher:3.0.1'
 //  Nice loading animations for Android - https://github.com/81813780/AVLoadingIndicatorView
     compile 'com.wang.avi:library:2.1.3'
 //  Custom layout that can rotate it's view, used in Rumours-  https://github.com/rongi/rotate-layout
@@ -171,7 +171,7 @@ dependencies {
 //  A small library containing a wrapper/helper for the Shared Preferences of android - https://github.com/Pixplicity/EasyPreferences
     compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
 //  Bind Android views and callbacks to fields and methods - https://github.com/JakeWharton/butterknife
-    compile 'com.jakewharton:butterknife:8.6.0'
+    compile 'com.jakewharton:butterknife:8.8.1'
 //  TODO @All - possibly outdated, check for alternative?
 //  Library for loading, caching and displaying images on Android - https://github.com/nostra13/Android-Universal-Image-Loader
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
