--- a/SportsSideKick/app/src/main/AndroidManifest.xml
+++ b/SportsSideKick/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:theme="@style/AppTheme"
         tools:replace="android:theme">
         <activity
-            android:name=".activity.PhoneLoungeActivity"
+            android:name=".activity.MainActivity"
             android:configChanges="keyboardHidden|screenSize|orientation|layoutDirection"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
@@ -44,7 +44,7 @@
         </activity>
 
         <activity
-            android:name=".activity.LoungeActivity"
+            android:name=".activity.MainActivityTablet"
             android:screenOrientation="sensorLandscape"
             android:windowSoftInputMode="stateHidden|adjustPan">
         </activity>
