--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -10,8 +10,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 27
 
-        // RenderScript is used for blurring image backgrounds
-        renderscriptTargetApi 17
+        renderscriptTargetApi 17 // blur images
         renderscriptSupportModeEnabled true
 
         multiDexEnabled true
@@ -29,133 +28,57 @@ android {
             versionName "5.0.0.6"
         }
     }
-
     buildTypes {
         release {
-            minifyEnabled false // TODO @Nemanja fix proguard file
-            shrinkResources false // TODO this only works when minifyEnabled is true!
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android.txt'),
+                    'proguard-rules.pro'
         }
     }
-
-    defaultConfig {
-        vectorDrawables.useSupportLibrary = true
-    }
-
     compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_7
-        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
-
     packagingOptions {
         exclude 'META-INF/LICENSE'
     }
 }
 
 dependencies {
-    // Annotation processors
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    // Google support libraries
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:27.0.2'
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:percent:27.0.2'
-    compile 'com.android.support:multidex:1.0.2'
 
-    // We only need Firebase for Push notifications!
     compile 'com.google.firebase:firebase-core:11.6.2'
     compile 'com.google.firebase:firebase-messaging:11.6.2'
 
-    // Other Google libraries for Youtube
-    compile ('com.google.http-client:google-http-client-android:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
-    compile ('com.google.api-client:google-api-client-android:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
-    compile ('com.google.api-client:google-api-client-gson:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
-    compile files('libs/YoutubeAndroidPlayerApi.jar')
-    compile ('com.google.apis:google-api-services-youtube:v3-rev181-1.22.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
-
-    // Backend
     compile 'com.gamesparks.sdk:gamesparks-java-sdk:0.4.4-SNAPSHOT'
 
-    // General data-binding package for Jackson used for parsing of GS response in model - https://github.com/FasterXML/jackson-databind
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0.pr1'
     compile 'org.greenrobot:eventbus:3.0.0'
-    // Video chat is implemented with Twillio  (it  resides on jcenter) - https://www.twilio.com/docs/api/video/download-video-sdks
+
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
+
     compile 'com.twilio:video-android:1.3.0'
-    // Facebook SDK is used for Analytics, Shar    e and to populate Sign up data - https://developers.facebook.com/docs/android/
+
     compile 'com.facebook.android:facebook-android-sdk:4.24.0'
-    compile('com.facebook.android:audience-network-sdk:4.24.0') {
-        exclude group: 'com.google.android.gms'
-    }
-    // Twitter KIT used for share functionality - https://github.com/twitter/twitter-kit-android
+    compile('com.facebook.android:audience-network-sdk:4.24.0')
     compile('com.twitter.sdk.android:tweet-composer:3.1.1')
 
-    // Amazon web services are used for uploading of user generated media content - https://aws.amazon.com/mobile/sdk/
     compile 'com.amazonaws:aws-android-sdk-core:2.4.2'
     compile 'com.amazonaws:aws-android-sdk-s3:2.4.2'
 
-    // Swipe refresh layout used in Wall, News, Rumours and Chat fragments - https://github.com/omadahealth/SwipyRefreshLayout
-    compile 'com.github.orangegangsters:swipy:1.2.3@aar'
-    // Expandable layout used in Join Chat fragment - https    ://github.com/AAkira/ExpandableLayout
-    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
-    // Permission handling library used around the project for  easier handling of permissions - https://github.com/hotchemi/PermissionsDispatcher
     compile 'com.github.hotchemi:permissionsdispatcher:3.0.1'
-    // Nice loading animations for Android - https://github.com/   81813780/AVLoadingIndicatorView
-    compile 'com.wang.avi:library:2.1.3'
-    // Custom layout that can rotate it's v    iew, used in Rumours-  https://github.com/rongi/rotate-layout
-    compile 'rongi.rotate-layout:rotate-layout:2.0.0'
-    // TODO @All - Android O now supports downloadable f   onts, explore this option instead of custom lib
-    // Custom fonts in Android -https://github.com/chrisjenx/Calligraphy
+    // Q: Android O now supports downloadable fonts, explore this option instead of custom lib
+    // A: It only works with fonts from Google repository. We can pick a similar font from there
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
-    // A small library containing a wrapper/helper  for the Shared Preferences of android - https://github.com/Pixplicity/EasyPreferences
-    compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
-    // Bind Android views and callbacks to fields and metho    ds - https://github.com/JakeWharton/butterknife
-    compile 'com.jakewharton:butterknife:8.8.1'
-    // TODO @All - possibly outdated, check for al ternative?
-    // Library for loading, caching and displaying images on    Android - https://github.com/nostra13/Android-Universal-Image-Loader
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    // TODO @All - there should be an implementation of this in android, check     if this library can be removed
-    // Circular ImageView for profile images - https://github.com/hdodenhof/CircleImageView
-    compile 'de.hdodenhof:circleimageview:2.1.0'
 
-    // Checkout (Android In-App Billing Library) used for billing - https://github.com/serso/android-checkout
-    compile 'org.solovyev.android:checkout:1.0.0'
-    // SnappySmoothScroller - used for message scrol   ling - https://github.com/nshmura/SnappySmoothScroller
-    compile 'com.nshmura:snappysmoothscroller:1.0.0'
-
-    // Java library for working with real-world HTML used for share of content from web view - https://jsoup.org/download
     compile 'org.jsoup:jsoup:1.10.2'
 
-    //     library for monitoring network connectivity, relies on rxJava - https://github.com/keiferstone/nonet
-    compile 'com.keiferstone:nonet:2.0.0'
-    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.0'
-
-    // Android Library to provide swipe, click and other functionality to RecyclerView
-    compile 'com.nikhilpanju.recyclerviewenhanced:recyclerviewenhanced:1.1.0'
-    // Apache commons library to extract file name from url for image downloadin   g - https://mvnrepository.com/artifact/commons-io/commons-io
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    // VideoView with controls
-    compile 'com.linsea:universalvideoview:1.1.0@aar'
-    // Image loader library - https://github.com/bumptech/glide/tree/3.0
     compile 'com.github.bumptech.glide:glide:4.4.0'
-    // Number picker used for translation popup to select language - https://github.com/ShawnLin013/NumberPicker
-    compile 'com.shawnlin:number-picker:2.4.4'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
+
 apply plugin: 'com.google.gms.google-services'
-repositories {
-    mavenCentral()
-}
