--- a/SportsSideKick/build.gradle
+++ b/SportsSideKick/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.2.10'
     repositories {
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -23,6 +24,7 @@ allprojects {
         maven {
             url "http://repo.gamesparks.net/mvn"
         }
+        mavenCentral()
     }
 }
 
