--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:27.0.2'
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:percent:27.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.google.firebase:firebase-core:11.6.2'
     compile 'com.google.firebase:firebase-messaging:11.6.2'
@@ -79,6 +80,8 @@ dependencies {
     compile 'org.jsoup:jsoup:1.10.2'
 
     compile 'com.github.bumptech.glide:glide:4.4.0'
+
+    compile 'com.linsea:universalvideoview:1.1.0@aar'
 }
 
 apply plugin: 'com.google.gms.google-services'
