--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -1,33 +1,15 @@
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-        maven { url 'https://maven.google.com' }
-    }
-
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.22.1'
-    }
-}
-repositories {
-    maven { url 'https://maven.fabric.io/public' }
-    maven { url 'https://maven.google.com' }
-}
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
-apply plugin: 'com.getkeepsafe.dexcount'
 
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
     defaultConfig {
-
         minSdkVersion 21
         targetSdkVersion 27
-
-        testInstrumentationRunner "android.support.left.runner.AndroidJUnitRunner"
-
         renderscriptTargetApi 17
         renderscriptSupportModeEnabled true
+        multiDexEnabled true
     }
     flavorDimensions "main"
     productFlavors {
@@ -42,49 +24,28 @@ android {
             versionName "5.0.0.6"
         }
     }
-
     lintOptions {
         checkReleaseBuilds false
-        // Or, if you prefer, you can continue to check for errors in release builds,
-        // but continue the build even when errors are found:
         abortOnError false
     }
-
     buildTypes {
         release {
-            minifyEnabled false // TODO @Nemanja fix proguard file
-            shrinkResources false // TODO this only works when minifyEnabled is true!
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false // TODO: Enable proguard file
+            shrinkResources false
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android.txt'),
+                    'proguard-rules.pro'
         }
     }
-
-    defaultConfig {
-        vectorDrawables.useSupportLibrary = true
-    }
-
     compileOptions {
         targetCompatibility JavaVersion.VERSION_1_7
         sourceCompatibility JavaVersion.VERSION_1_7
     }
-
     packagingOptions {
         exclude 'META-INF/LICENSE'
     }
-
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
-    }
-
-    allprojects {
-        repositories {
-            jcenter()
-            flatDir {
-                dirs 'libs'
-            }
-            maven {
-                url "https://jitpack.io"
-            }
-        }
     }
 }
 
@@ -201,8 +162,6 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
 //  VideoView with controls
     implementation 'com.linsea:universalvideoview:1.1.0@aar'
-//  TrueTime for Android - NTP client for Android : https://github.com/instacart/truetime-android TODO - @Filip There is no need for this anymore
-    implementation 'com.github.instacart.truetime-android:library-extension-rx:3.3'
 //  Image loader library - https://github.com/bumptech/glide/tree/3.0
     implementation 'com.github.bumptech.glide:glide:4.2.0'
 //  Image loader library - https://github.com/square/picasso
@@ -215,4 +174,5 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
+
 apply plugin: 'com.google.gms.google-services'
