--- a/SportsSideKick/build.gradle
+++ b/SportsSideKick/build.gradle
@@ -3,21 +3,28 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://maven.google.com' }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.google.gms:google-services:3.1.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
         classpath "com.github.dcendents:android-maven-gradle-plugin:1.4.1"
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.2'
+        classpath 'io.fabric.tools:gradle:1.22.1'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
         maven {
             url "http://repo.gamesparks.net/mvn"
+        }
+        maven {
+            url 'https://maven.fabric.io/public'
         }
     }
 }
