--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -30,8 +30,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false // TODO: Enable proguard file
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile(
                     'proguard-android.txt'),
                     'proguard-rules.pro'
@@ -40,129 +40,111 @@ android {
 }
 
 dependencies {
-// Local libraries - Youtube
+    // Local libraries - Youtube
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
-// Annotation processors
+    // Annotation processors
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-// Google support libraries
+    // Google support libraries
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:percent:26.1.0'
-//  Required by Glide - image library
+    // Required by Glide - image library
     implementation 'com.android.support:support-v4:26.1.0'
-
-//  We only need Firebase for Push notifications!
+    // We only need Firebase for Push notifications!
     implementation 'com.google.firebase:firebase-core:11.4.2'
     implementation 'com.google.firebase:firebase-messaging:11.4.2'
-
-//  Other Google libraries for Youtube
-    implementation ('com.google.http-client:google-http-client-android:1.20.0')
+    // Other Google libraries for Youtube
+    implementation('com.google.http-client:google-http-client-android:1.20.0')
             {
                 exclude group: 'org.apache.httpcomponents'
             }
-    implementation ('com.google.api-client:google-api-client-android:1.20.0')
+    implementation('com.google.api-client:google-api-client-android:1.20.0')
             {
                 exclude group: 'org.apache.httpcomponents'
             }
-    implementation ('com.google.api-client:google-api-client-gson:1.20.0')
+    implementation('com.google.api-client:google-api-client-gson:1.20.0')
             {
                 exclude group: 'org.apache.httpcomponents'
             }
     implementation files('libs/YoutubeAndroidPlayerApi.jar')
-    implementation ('com.google.apis:google-api-services-youtube:v3-rev181-1.22.0')
+    implementation('com.google.apis:google-api-services-youtube:v3-rev181-1.22.0')
             {
                 exclude group: 'org.apache.httpcomponents'
             }
-
-//  Gamesparks SDK - whole backend is relying on it (it resides on maven) - TODO Check for version that is table - 3.3 and 3.4 are not working!
+    // Gamesparks SDK - whole backend is relying on it (it resides on maven) - TODO Check for version that is table - 3.3 and 3.4 are not working!
     implementation 'com.gamesparks.sdk:gamesparks-java-sdk:0.3.2-SNAPSHOT'
 
-//  General data-binding package for Jackson used for parsing of GS response in model - https://github.com/FasterXML/jackson-databind
+    // General data-binding package for Jackson used for parsing of GS response in model - https://github.com/FasterXML/jackson-databind
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0.pr1'
-//  Event Bus - we are using Greenrobot version! https://github.com/greenrobot/EventBus
+    // Event Bus - we are using Greenrobot version! https://github.com/greenrobot/EventBus
     implementation 'org.greenrobot:eventbus:3.0.0'
-//  Video chat is implemented with Twillio (it  resides on jcenter) - https://www.twilio.com/docs/api/video/download-video-sdks
+    // Video chat is implemented with Twillio (it  resides on jcenter) - https://www.twilio.com/docs/api/video/download-video-sdks
     implementation 'com.twilio:video-android:1.3.0'
-//  Facebook SDK is used for Analytics, Share and to populate Sign up data - https://developers.facebook.com/docs/android/
+    // Facebook SDK is used for Analytics, Share and to populate Sign up data - https://developers.facebook.com/docs/android/
     implementation 'com.facebook.android:facebook-android-sdk:4.24.0'
     compile('com.facebook.android:audience-network-sdk:4.24.0') {
         exclude group: 'com.google.android.gms'
     }
-//  Twitter KIT used for share functionality - https://github.com/twitter/twitter-kit-android
+    // Twitter KIT used for share functionality - https://github.com/twitter/twitter-kit-android
     compile('com.twitter.sdk.android:twitter:2.3.2@aar') {
         transitive = true;
     }
-
-//  Amazon web services are used for uploading of user generated media content - https://aws.amazon.com/mobile/sdk/
+    // Amazon web services are used for uploading of user generated media content - https://aws.amazon.com/mobile/sdk/
     implementation 'com.amazonaws:aws-android-sdk-core:2.4.2'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.4.2'
-
-//  TODO @All - it should be replaced with more stable up to date library
-//  Circle Progress UI element used for Profile icon - https://github.com/lzyzsd/CircleProgress
+    // TODO @All - it should be replaced with more stable up to date library
+    // Circle Progress UI element used for Profile icon - https://github.com/lzyzsd/CircleProgress
     implementation 'com.github.lzyzsd:circleprogress:+'
-
-//  Swipe refresh layout used in Wall, News, Rumours and Chat fragments - https://github.com/omadahealth/SwipyRefreshLayout
+    // Swipe refresh layout used in Wall, News, Rumours and Chat fragments - https://github.com/omadahealth/SwipyRefreshLayout
     implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
-//  Expandable layout used in Join Chat fragment - https://github.com/AAkira/ExpandableLayout
+    // Expandable layout used in Join Chat fragment - https://github.com/AAkira/ExpandableLayout
     implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
-//  Permission handling library used around the project for easier handling of permissions - https://github.com/hotchemi/PermissionsDispatcher
+    // Permission handling library used around the project for easier handling of permissions - https://github.com/hotchemi/PermissionsDispatcher
     implementation 'com.github.hotchemi:permissionsdispatcher:3.0.1'
-//  Nice loading animations for Android - https://github.com/81813780/AVLoadingIndicatorView
+    // Nice loading animations for Android - https://github.com/81813780/AVLoadingIndicatorView
     implementation 'com.wang.avi:library:2.1.3'
-//  Custom layout that can rotate it's view, used in Rumours-  https://github.com/rongi/rotate-layout
+    // Custom layout that can rotate it's view, used in Rumours-  https://github.com/rongi/rotate-layout
     implementation 'rongi.rotate-layout:rotate-layout:2.0.0'
-//  TODO @All - Android O now supports downloadable fonts, explore this option instead of custom lib
-//  Custom fonts in Android -https://github.com/chrisjenx/Calligraphy
+    // TODO @All - Android O now supports downloadable fonts, explore this option instead of custom lib
+    // Custom fonts in Android -https://github.com/chrisjenx/Calligraphy
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
-//  A small library containing a wrapper/helper for the Shared Preferences of android - https://github.com/Pixplicity/EasyPreferences
+    // A small library containing a wrapper/helper for the Shared Preferences of android - https://github.com/Pixplicity/EasyPreferences
     implementation 'com.pixplicity.easyprefs:library:1.8.1@aar'
-//  Bind Android views and callbacks to fields and methods - https://github.com/JakeWharton/butterknife
+    // Bind Android views and callbacks to fields and methods - https://github.com/JakeWharton/butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
-//  TODO @All - possibly outdated, check for alternative?
-//  Library for loading, caching and displaying images on Android - https://github.com/nostra13/Android-Universal-Image-Loader
+    // TODO @All - possibly outdated, check for alternative?
+    // Library for loading, caching and displaying images on Android - https://github.com/nostra13/Android-Universal-Image-Loader
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-//  TODO @All - there should be an implementation of this in android, check if this library can be removed
-//  Circular ImageView for profile images - https://github.com/hdodenhof/CircleImageView
+    // TODO @All - there should be an implementation of this in android, check if this library can be removed
+    // Circular ImageView for profile images - https://github.com/hdodenhof/CircleImageView
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-
-//  Checkout (Android In-App Billing Library) used for billing - https://github.com/serso/android-checkout
+    // Checkout (Android In-App Billing Library) used for billing - https://github.com/serso/android-checkout
     implementation 'org.solovyev.android:checkout:1.0.0'
-//  SnappySmoothScroller - used for message scrolling - https://github.com/nshmura/SnappySmoothScroller
+    // SnappySmoothScroller - used for message scrolling - https://github.com/nshmura/SnappySmoothScroller
     implementation 'com.nshmura:snappysmoothscroller:1.0.0'
-
-//  Java library for working with real-world HTML used for share of content from web view - https://jsoup.org/download
+    // Java library for working with real-world HTML used for share of content from web view - https://jsoup.org/download
     implementation 'org.jsoup:jsoup:1.10.2'
-
-
-//  Real time remote log tracking - https://bugfender.com/ TODO @Filip remove/disable for production
+    // Real time remote log tracking - https://bugfender.com/ TODO @Filip remove/disable for production
     implementation 'com.bugfender.sdk:android:0.+'
-//  library for monitoring network connectivity, relies on rxJava - https://github.com/keiferstone/nonet
+    // library for monitoring network connectivity, relies on rxJava - https://github.com/keiferstone/nonet
     implementation 'com.keiferstone:nonet:2.0.0'
     implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.0'
-
-//  Random human readable name generator for testing - https://github.com/Atrox/haikunatorjava TODO @Filip remove for production
+    // Random human readable name generator for testing - https://github.com/Atrox/haikunatorjava TODO @Filip remove for production
     implementation 'me.atrox.haikunator:Haikunator:1.3'
-//  Android Library to provide swipe, click and other functionality to RecyclerView
+    // Android Library to provide swipe, click and other functionality to RecyclerView
     implementation 'com.nikhilpanju.recyclerviewenhanced:recyclerviewenhanced:1.1.0'
-//  Apache commons library to extract file name from url for image downloading - https://mvnrepository.com/artifact/commons-io/commons-io
+    // Apache commons library to extract file name from url for image downloading - https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
-//  VideoView with controls
+    // VideoView with controls
     implementation 'com.linsea:universalvideoview:1.1.0@aar'
-//  Image loader library - https://github.com/bumptech/glide/tree/3.0
+    // Image loader library - https://github.com/bumptech/glide/tree/3.0
     implementation 'com.github.bumptech.glide:glide:4.2.0'
-//  Image loader library - https://github.com/square/picasso
+    // Image loader library - https://github.com/square/picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
-
-//  Number picker used for translation popup to select language - https://github.com/ShawnLin013/NumberPicker
+    // Number picker used for translation popup to select language - https://github.com/ShawnLin013/NumberPicker
     implementation 'com.shawnlin:number-picker:2.4.4'
-    // Room
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
